<resources>
    <string name="app_name">EFUEL STATION</string>
    <string name="gmap_api_key">AIzaSyCTeaXx0cL2T6aEIbyMhRHkqQ1NsYZ10ms</string>
    <string name="facebook_app_id">2019456584964950</string>
    <string name="fb_login_protocol_scheme">fb2019456584964950</string>
    <string name="gmap_API_KEY">AIzaSyAqK0bU3qzogd5bTiRlNnnSZM2uQl0u2Dc</string>
    <string name="mainURL">http://azsqldevsrv.cloudapp.net/Efuel/</string>
    <string name="font_light">light.ttf</string>
    <string name="font_regular">regular.ttf</string>
    <string name="font_bold">bold.ttf</string>
    <string name="font_semi_bold">semiBold.ttf</string>
    <string name="CreditAgreementUrl">CreditAgremment</string>
    <string name="DisclaimerUrl">Disclaimer</string>
    <string name="EULAUrl">LicenseAgremment</string>
    <string name="FAQSUrl">FAQs</string>
    <string name="PaymentAgreementUrl">PaymentAgremment</string>
    <string name="PrivacyPolicyUrl">PrivacyPolicies</string>
    <string name="TermsUrl">TermsandCondition</string>
    <string name="HelpUrl">Help/</string>
    <string name="selectpersonalabel">Please Select Account Type</string>
    <string name="selfdriven">SELF DRIVEN</string>
    <string name="Continue">Continue</string>
    <string name="vehicledriver">Vehicle Driver</string>
    <string name="vehicleowner">Vehicle Owner</string>
    <string name="gasstaff">Gas Station Staff</string>
    <string name="gasowner">Gas Station Owner</string>
    <string name="Rs">\u20B9</string>
    <string name="rupee_symbol">₹ </string>
    <string name="refuel">Refuel</string>
    <string name="addfuelstation">Add And Edit Fuelstations</string>
    <string name="Pay4pal">Pay4pal</string>
    <string name="pay4pal_request_added">Pay4pal request has been added</string>
    <string name="MyDriversandVehicles">Drivers &amp; Vehicles</string>
    <string name="MyDriversandVehicles1">DRIVERS &amp; VEHICLES</string>
    <string name="TrackDriver1">TRACK DRIVER</string>
    <string name="Nearbyfuelpump">NearBy Fuel Station</string>
    <string name="fuel_station_detail">Fuel Station Details</string>
    <string name="Nearbyfuelpump1">NEARBY FUEL STATION</string>
    <string name="PaymentHistoryandInvoicesCaps">PAYMENT HISTORY &amp; INVOICES</string>
    <string name="PaymentHistoryandInvoices">Payment History &amp; Invoices</string>
    <string name="service">SERVICE</string>
    <string name="MyProfile">My Profile</string>
    <string name="StaffRefuel">Staff Refuel</string>
    <string name="Myoperators">OPERATORS</string>
    <string name="UpdateFuelprice">Update Fuel Price</string>
    <string name="NearbyDrivers">NearBy Drivers</string>
    <string name="AddDrivers"> Add Drivers</string>
    <string name="myvehicleanddrivers">Drivers &amp; Vehicles</string>
    <string name="saleinitiation">Sale Initiation</string>
    <string name="tanktypes">Tank Types</string>
    <string name="totalsales">Total Sales</string>
    <string name="home">Home</string>
    <string name="space">\u0020</string>
    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="typeofexpense">Type of Expense</string>
    <string name="typeofservice">Type of Service</string>
    <string name="expense_type">Expense Type</string>
    <string name="service_type">Service Type</string>
    <string name="enter_price">Enter price of selected type</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_time">Enter time</string>
    <string name="enter_odometer">Enter odometer(km)</string>
    <string name="add_expense_type_validation">Add expense type</string>
    <string name="add_service_type_validation">Add service type</string>
    <string name="enter_notes">Enter notes</string>
    <string name="enter_reason">Enter reason</string>
    <string name="enter_dispense_code">Enter Dispense Code to Verify Transaction</string>
    <string name="reason">reason</string>
    <string name="notes">notes</string>
    <string name="add_price">Add Price</string>
    <string name="add_type_of_expense">Add Type of Expense</string>
    <string name="add_type_of_service">Add Type of Service</string>
    <string name="expense_name">Expense Name</string>
    <string name="service_name">Service Name</string>
    <string name="add_expense_type">+ Add Expense Type</string>
    <string name="add_service_type">+ Add Service Type</string>
    <string name="add_expense_type_dialog">ADD TYPE OF EXPENSE</string>
    <string name="add_service_type_dialog">ADD TYPE OF SERVICE</string>
    <string name="odometer">ODOMETER(km)</string>
    <string name="odometer_label">Odometer - </string>
    <string name="total_label">Total - </string>
    <string name="date_label">Date - </string>
    <string name="time_label">Time - </string>
    <string name="expense_added_msg">Your expense has been added</string>
    <string name="expense_update_msg">Your expense has been updated</string>
    <string name="expense_deleted_msg">Your expense has been deleted</string>
    <string name="service_added_msg">Your service has been added</string>
    <string name="service_updated_msg">Your service has been updated</string>
    <string name="service_deleted_msg">Your service has been deleted</string>
    <string name="entername">Please Enter Name</string>
    <string name="entermobilenumber">Please Enter Mobile Number</string>
    <string name="enteremailid">Please Enter Email Id</string>
    <string name="selectvehiclemodel">Please Select Vehicle Model</string>
    <string name="selectvehiclenumber">Please Enter Vehicle Number</string>
    <string name="selectvehiclecolor">Please Enter Vehicle Color</string>
    <string name="enterFuelcapacity">Please Enter Fuel Capacity</string>
    <string name="selectfuel">Please Select Fuel Category</string>
    <string name="enterusername">Please Enter Username</string>
    <string name="enterpassword">Please Enter Password</string>
    <string name="invaliduser">Invalid User</string>
    <string name="enterfname">Please Enter Name</string>
    <string name="enterlastname">Please Enter LastName</string>
    <string name="enterotp">Please Enter OTP</string>
    <string name="invalidotp">Invalid OTP</string>
    <string name="add_image">Profile Image</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="description">We need Some Sign Up Details</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or">(or)</string>
    <string name="login_details">Login Details</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="enter_login_id">Enter Login ID</string>
    <string name="language">Language</string>
    <string name="additional_information">Additional Information</string>
    <string name="company_name_additional">Company Name (Additional)</string>
    <string name="address_additional">ADDRESS (Additional)</string>
    <string name="alternate_number_additional">Alternate Phone Number (Additional)</string>
    <string name="alternate_email_additional">ALTERNATE EMAIL (Additional)</string>
    <string name="or_signin_via">Or Sign In Via</string>
    <string name="personal_details">Personal Details</string>
    <string name="addvehicle">Add Vehicle</string>
    <string name="adddriver">Add Driver</string>
    <string name="profile">Profile</string>
    <string name="registration">REGISTRATION</string>
    <string name="vehiclemodel">Vehicle Model</string>
    <string name="vehiclecolor">Vehicle Color</string>
    <string name="aliasname">Alias (Nick Name)</string>
    <string name="vehiclenumber">Vehicle Number</string>
    <string name="vehnum">KA 17 RB 143</string>
    <string name="FuelCapacity">Fuel Capacity</string>
    <string name="add">Add</string>
    <string name="fueltype">Fuel Type</string>
    <string name="addvehiclemodel">Add Vehicle Model</string>
    <string name="samplenum">80</string>
    <string name="model">Model</string>
    <string name="view_schedule">View Schedule</string>
    <string name="schedule_date_time">Scheduel Date Time</string>
    <string name="created_on">Created On</string>
    <string name="modified">Modified On</string>
    <string name="created_by">Created By</string>
    <string name="modified_by">Modified By</string>
    <string name="Staffrefuel">STAFF REFUEL</string>
    <string name="fuelstationid">Fuel Station ID</string>
    <string name="Entervehicalno">Enter Vehicle Number</string>
    <string name="choose_pic">Choose Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="fueltypes">PETROL Normal</string>
    <string name="delivery">DISPENSED</string>
    <string name="dispense">DISPENSE</string>
    <string name="sendername">SENDER NAME</string>
    <string name="timedate">TIME/DATE</string>
    <string name="paymentstatus">PAYMENT STATUS</string>
    <string name="cost">COST</string>
    <string name="lter">ltr</string>
    <string name="sendernameres">JOE</string>
    <string name="dateaproval">14:53pm 29/3/2016</string>
    <string name="deliveryres">APPROVED</string>
    <string name="otp1">Login using the OTP sent to</string>
    <string name="otp">OTP</string>
    <string name="sampleotp">123456</string>
    <string name="resendotp">Resend</string>
    <string name="verify">Verify</string>
    <string name="myvehicle">Vehicles</string>
    <string name="mydriver">Drivers</string>
    <string name="add_fuel">Add Fuel</string>
    <string name="update">update</string>
    <string name="passcode">Passcode</string>
    <string name="samplepasscode">1234</string>
    <string name="operators">Operators</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_passcode">OLD PASSCODE</string>
    <string name="myfvrts">FAVOURITES</string>
    <string name="home_caps">HOME</string>
    <string name="refuel_caps">REFUEL</string>
    <string name="pay4pal_caps">PAY4PAL</string>
    <string name="my_drivers_vehicles"><![CDATA[DRIVERS & VEHICLES]]></string>
    <string name="verifytransaction">Verify Transactions</string>
    <string name="description2">Create A New Password For Your Account</string>
    <string name="expense">EXPENSE</string>
    <string name="park_transaction">Park Transaction</string>
    <string name="MyCalist_txt">CREDIT AGREEMENTS</string>
    <string name="enter_email_or_mobile">Enter Email Address</string>
    <string name="creditagreement">Credit Agreement</string>
    <string name="my_fuel_station">Fuel Stations</string>
    <string name="fuel_price">Fuel Prices</string>
    <string name="cash_transaction">Cash Transactions</string>
    <string name="enter_new_passw">Enter new Password</string>
    <string name="saleHistoryandInvoices">Sale History &amp; Invoices</string>
    <string name="totalsales_by_fuel">Total Sale By Fuel Type</string>
    <string name="confirmpassword">Enter confirm password</string>
    <string name="reports">Reports</string>
</resources>