<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_operator_home"
            android:title="@string/home"
            android:visible="true"
            />
        <item
            android:id="@+id/nav_operator_fuelprice"
            android:title="@string/fuel_price"
            android:visible="true"
            />

        <item
            android:id="@+id/nav_operator_initiatesale"
            android:title="@string/saleinitiation"
            android:visible="true"
            />

        <item
            android:id="@+id/nav_operator"
            android:title="@string/operators"
            android:visible="true"/>

        <item
            android:id="@+id/nav_operator_saleshistory"
            android:title="@string/saleHistoryandInvoices"
            android:visible="true"
            />

        <item
            android:id="@+id/nav_operator_credit_agreement_list"
            android:title="@string/creditagreement"
            android:visible="true"/>

        <item
            android:id="@+id/nav_operator_park_trans"
            android:title="@string/park_transaction"
            android:visible="true"
            />

        <item
            android:id="@+id/nav_operator_verify_trans"
            android:title="@string/verifytransaction"
            android:visible="true"
            />

        <item
            android:id="@+id/nav_operator_tank_types"
            android:title="@string/tanktypes"
            android:visible="true"/>

        <item
            android:id="@+id/nav_operator_totalsale"
            android:title="@string/totalsales"
            android:visible="true"
            />

        <item
            android:id="@+id/nav_operator_fuel_station"
            android:title="@string/my_fuel_station"
            android:visible="true"
            />

        <item
            android:id="@+id/nav_operator_cashtransaction"
            android:title="@string/cash_transaction"
            android:visible="true"
            />
    </group>


</menu>
