<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:visibility="visible">

    <com.developtech.efuelfo.customs.CustomTextView
        style="@style/TextViewNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/corner_background_less_radius"
        android:orientation="vertical">

        <com.developtech.efuelfo.customs.CustomTextView
            style="@style/TextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/grey_text" />

        <com.developtech.efuelfo.customs.CustomEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signupedittext_height"
            android:background="@null"
            android:hint="@string/enter_first_name"
            android:inputType="textCapWords"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLength="25"
            android:textColor="@color/text_login"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/textsize16"
            app:fontName="@string/font_semi_bold" />

        <View
            style="@style/viewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp" />


        <com.developtech.efuelfo.customs.CustomTextView
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"

            android:textColor="@color/grey_text" />

        <com.developtech.efuelfo.customs.CustomEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signupedittext_height"
            android:background="@null"
            android:hint="@string/enter_last_name"
            android:inputType="textCapWords"
            android:maxLength="25"
            android:textColor="@color/text_login"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/textsize16"
            app:fontName="@string/font_semi_bold" />

        <View
            style="@style/viewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp" />

        <com.developtech.efuelfo.customs.CustomTextView
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/email"
            android:textColor="@color/grey_text" />

        <com.developtech.efuelfo.customs.CustomEditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signupedittext_height"
            android:background="@null"
            android:hint="@string/enter_email_or_mobile"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/text_login"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/textsize15"
            app:fontName="@string/font_semi_bold" />

        <View
            style="@style/viewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp" />

        <com.developtech.efuelfo.customs.CustomTextView
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:textColor="@color/grey_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerCode"
                android:layout_width="40dp"
                android:layout_height="@dimen/signupedittext_height"
                android:background="@null"
                android:spinnerMode="dialog" />

            <com.developtech.efuelfo.customs.CustomEditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signupedittext_height"
                android:background="@null"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/text_login"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/textsize15"
                app:fontName="@string/font_semi_bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/grey_text" />

        <com.developtech.efuelfo.customs.CustomTextView
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/grey_text" />

        <com.developtech.efuelfo.customs.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/default_line_indicator_unselected_color">

            <com.developtech.efuelfo.customs.CustomEditText
                android:id="@+id/etPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signupedittext_height"
                android:background="@null"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColor="@color/text_login"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/textsize15"
                app:fontName="@string/font_semi_bold" />

        </com.developtech.efuelfo.customs.CustomTextInputLayout>


    </LinearLayout>
</LinearLayout>
