<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/otp" />

            <com.developtech.efuelfo.customs.CustomTextView
                android:id="@+id/tvTitle"
                style="@style/TextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/change_password"
                />

            <View
                android:layout_width="120dp"
                android:layout_height="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/green" />

            <com.developtech.efuelfo.customs.CustomTextView
                style="@style/TextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/description2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/corner_background_less_radius"
                android:orientation="vertical">


                <com.developtech.efuelfo.customs.CustomTextView
                    style="@style/TextViewMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/old_passcode"
                    android:textColor="@color/grey_text"
                    android:visibility="gone" />

                <com.developtech.efuelfo.customs.CustomEditText
                    android:id="@+id/etOldPass"
                    style="@style/EditTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:hint="@string/samplepasscode"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:visibility="gone" />

                <com.developtech.efuelfo.customs.CustomTextView
                    android:id="@+id/vT_acpw_passcodetext"
                    style="@style/TextViewMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textColor="@color/grey_text" />

                <com.developtech.efuelfo.customs.CustomEditText
                    android:id="@+id/etNewPass"
                    style="@style/EditTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_new_passw"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey_text" />

                <com.developtech.efuelfo.customs.CustomTextView
                    style="@style/TextViewMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/confirm_password"
                    android:textColor="@color/grey_text" />

                <com.developtech.efuelfo.customs.CustomEditText
                    android:id="@+id/etConfirmPass"
                    style="@style/EditTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />
            </LinearLayout>

            <com.developtech.efuelfo.customs.CustomButton
                android:id="@+id/btnContinue"
                style="@style/buttonGeenStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/Continue" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/layout_progress" />
</FrameLayout>